<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20sp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progressBar"
        style="?android:progressBarStyleLarge"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <AutoCompleteTextView
            android:id="@+id/emailAddressTxt"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password_txt"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/loginBtn"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@android:color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/or_txt"
            android:text="@string/or"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/create_btn"
            android:text="@string/create_account"
            android:textColor="@android:color/holo_red_light"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        
    </LinearLayout>


</LinearLayout>