<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20sp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progressBar_ACC"
        style="?android:progressBarStyleLarge"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/username_ACC"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <AutoCompleteTextView
            android:id="@+id/emailAddressTxt_ACC"
            android:hint="@string/email"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password_txt_ACC"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_btn_ACC"
            android:text="@string/create_account"
            android:textColor="@android:color/holo_red_light"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</LinearLayout>