<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/self_gratitude_journal"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeL"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="6dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:layout_height="90dp">
            <TextView
                android:id="@+id/grateful"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/what_are_you_grateful_for_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <Button
        android:id="@+id/getStarted"
        android:text="@string/get_started"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>