<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostJournalAcivity">

    <ImageView
        android:id="@+id/post_Image_background"
        android:layout_width="389dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        android:src="@drawable/image_one" />

    <TextView
        android:id="@+id/post_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sm"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/post_Image_background"
        app:layout_constraintEnd_toEndOf="@+id/post_Image_background"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="@+id/post_Image_background"
        app:layout_constraintTop_toTopOf="@+id/post_Image_background"
        app:layout_constraintVertical_bias="0.878" />

    <TextView
        android:id="@+id/post_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@+id/post_Image_background"
        app:layout_constraintEnd_toEndOf="@+id/post_Image_background"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="@+id/post_Image_background"
        app:layout_constraintTop_toBottomOf="@+id/post_name_txt"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/post_Image_set"
        android:layout_width="76dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_Image_background"
        app:layout_constraintEnd_toEndOf="@+id/post_Image_background"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/post_Image_background"
        app:layout_constraintTop_toTopOf="@+id/post_Image_background"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_title_EDTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_Image_set" />

    <EditText
        android:id="@+id/post_thought_EDTXT"
        android:hint="@string/thoughts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_EDTXT"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="294dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_thought_EDTXT" />

    <Button
        android:id="@+id/post_saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@android:color/holo_orange_dark"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_progressBar"
        app:layout_constraintVertical_bias="0.788" />

</androidx.constraintlayout.widget.ConstraintLayout>